--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,7 +23,11 @@
             <div class="navlinks-children">
               {%- for childlink in link[1] -%}
               {%- for linkparts in childlink %}
-              <a href="{{ linkparts[1] | relative_url }}">{{ linkparts[0] }}</a>
+              <!-- <a href="{{ linkparts[1] | relative_url }}">{{ linkparts[0] }}</a> -->
+	      <a href="{{ linkparts[1] | relative_url }}" 
+	      {% if linkparts[1] contains '.pdf' %}target="_blank"{% endif %}
+	      >{{ linkparts[0] }}</a>
+
               {%- endfor -%}
               {%- endfor %}
             </div>
