--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,5 +1,5 @@
+<!--
 {% if site.google_analytics %}
-<!-- Google Analytics -->
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -10,5 +10,15 @@
     ga('create', '{{ site.google_analytics }}', 'auto');
     ga('send', 'pageview');
 </script>
-<!-- End Google Analytics -->
 {% endif %}
+-->
+{% if site.google_analytics %}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-180993738-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{ site.google_analytics }}' );
+</script>
